# patrolling_sim

./: .gitignore  CMakeLists.txt  README.md  abort_experiment.sh  kill_all.sh  lastConfigUsed  manifest.xml  package.xml  run_exp.sh  setinitposes.py  stack.xml  start_experiment.py  stop_experiment.sh
patrolling_sim/: CMakeLists.txt  GBS.sh  SEBS.sh  c_cognitive.sh  c_reactive.sh  cyclic.sh  hc_reactive.sh  mainpage.dox  manifest.xml  msp.sh  run.sh
patrolling_sim/MSP/: 1r-5-map_1_0  1r-5-map_2_1
patrolling_sim/MSP/cumberland/: cumberland_12_0  cumberland_12_2  cumberland_12_5  cumberland_12_8  cumberland_1_0  cumberland_3_0  cumberland_3_1  cumberland_3_2  cumberland_4_2  cumberland_5_2  cumberland_5_3  cumberland_6_3  cumberland_7_3  cumberland_7_5  cumberland_8_3  cumberland_8_5
patrolling_sim/MSP/example/: example_2_1  example_4_0  example_4_1  example_4_3  example_6_0  example_6_2  example_6_4  example_8_2  example_8_4  example_8_5
patrolling_sim/MSP/grid/: grid_2_0  grid_2_1  grid_3_0  grid_3_2  grid_4_2  grid_4_3  grid_5_0  grid_5_2  grid_5_4  grid_6_0  grid_6_1  grid_6_3  grid_7_2  grid_7_6  grid_8_4  grid_8_5  grid_8_7  grid_9_1  grid_9_4
patrolling_sim/launch/1r5/: 1r5_1robot.launch  1r5_2robots.launch  1r5_3robots.launch  1r5_stage.launch  1r5_stage2robots.launch  1r5_stage3robots.launch
patrolling_sim/launch/cumberland/: cumberland_12robots.launch  cumberland_12robots_A.launch  cumberland_12robots_B.launch  cumberland_12robots_C.launch  cumberland_12robots_D.launch  cumberland_1robot.launch  cumberland_2robots.launch  cumberland_4robots.launch  cumberland_6robots.launch  cumberland_6robots_A.launch  cumberland_6robots_B.launch  cumberland_8robots.launch  cumberland_8robots_A.launch  cumberland_8robots_B.launch  cumberland_8robots_C.launch  cumberland_stage12robots.launch  cumberland_stage1robot.launch  cumberland_stage2robots.launch  cumberland_stage4robots.launch  cumberland_stage6robots.launch  cumberland_stage8robots.launch
patrolling_sim/launch/example/: example_12robots_A.launch  example_12robots_B.launch  example_12robots_C.launch  example_12robots_D.launch  example_1robot.launch  example_2robots.launch  example_4robots.launch  example_6robots.launch  example_6robots_A.launch  example_6robots_B.launch  example_8robots.launch  example_8robots_A.launch  example_8robots_B.launch  example_8robots_C.launch  example_stage12robots.launch  example_stage1robot.launch  example_stage2robots.launch  example_stage4robots.launch  example_stage6robots.launch  example_stage8robots.launch
patrolling_sim/launch/grid/: grid_12robots.launch  grid_12robots_A.launch  grid_12robots_B.launch  grid_12robots_C.launch  grid_12robots_D.launch  grid_1robot.launch  grid_2robots.launch  grid_4robots.launch  grid_6robots.launch  grid_6robots_A.launch  grid_6robots_B.launch  grid_8robots.launch  grid_8robots_A.launch  grid_8robots_B.launch  grid_8robots_C.launch  grid_stage12robots.launch  grid_stage1robot.launch  grid_stage2robots.launch  grid_stage4robots.launch  grid_stage6robots.launch  grid_stage8robots.launch
patrolling_sim/maps/: 1r-5-map.pgm  1r-5-map.world  1r-5-map.yaml  1r-5-map2robots.world  1r-5-map3robots.world
patrolling_sim/maps/cumberland/: cumberland.pgm  cumberland.world  cumberland12robots.world  cumberland2robots.world  cumberland4robots.world  cumberland6robots.world  cumberland8robots.world
patrolling_sim/maps/example/: example Graph Info  example.world  example.yaml  example12robots.world  example2robots.world  example4robots.world  example6robots.world  example8robots.world
patrolling_sim/maps/grid/: grid.graph  grid.world  grid.yaml  grid12robots.world  grid2robots.world  grid4robots.world  grid6robots.world  grid8robots.world
patrolling_sim/params/amcl/: base_local_planner_params.yaml
patrolling_sim/params/amcl/1r5_1robot/: amcl_diff_1r5.launch  base_local_planner_params.yaml
patrolling_sim/params/amcl/1r5_2robots/: amcl_diff_1r5_robot0.launch  amcl_diff_1r5_robot1.launch  base_local_planner_params.yaml  global_costmap_params_robot0.yaml
patrolling_sim/params/amcl/1r5_3robots/: amcl_diff_1r5_robot0.launch  amcl_diff_1r5_robot1.launch  amcl_diff_1r5_robot2.launch  base_local_planner_params.yaml
patrolling_sim/params/amcl/cumberland_12robots/: amcl_diff_robot0.launch  amcl_diff_robot1.launch  amcl_diff_robot10.launch  amcl_diff_robot11.launch  (+11 more)
patrolling_sim/src/: Conscientious_Reactive.cpp  Cyclic.cpp  GBS.cpp  Heuristic_Conscientious_Reactive.cpp  MSP.cpp  SEBS.cpp  getgraph.h  monitor.cpp
(+317 files in other folders)
